enable usync snapshots

--- a/Wmca.Web/appsettings.json
+++ b/Wmca.Web/appsettings.json
@@ -52,6 +52,13 @@
         "AppId": "26f1e19e-ae53-49f5-bd01-93722ef91c3f",
         "AppKey": "jkdulkhr/cUWxC0jCnaO/m6LvSmatFo7VDBKoxHyJa0="
       }
+    },
+    "Snapshots": {
+      "Enabled": true,
+      "DisableImport": false,
+      "HandlerSet": "Default",
+      "Folders": "~/views,~/wwwroot/css,~/wwwroot/scripts",
+      "Exlude": ""
     }
   }
 }
