usync configured and connection string update to sql server

--- a/Wmca.Web/appsettings.json
+++ b/Wmca.Web/appsettings.json
@@ -42,8 +42,8 @@
     }
   },
   "ConnectionStrings": {
-    "umbracoDbDSN": "Data Source=|DataDirectory|/Umbraco.sqlite.db;Cache=Shared;Foreign Keys=True;Pooling=True",
-    "umbracoDbDSN_ProviderName": "Microsoft.Data.Sqlite"
+    "umbracoDbDSN": "Data Source=(LocalDb)\\MSSQLLocalDB;Initial Catalog=TestDB2;Integrated Security=True",
+    "umbracoDbDSN_ProviderName": "System.Data.SqlClient"
   },
   "uSync": {
     "Publisher": {
