--- a/Wmca.Web/uSync/v9/DataTypes/BlockListBlogLayout.config
+++ b/Wmca.Web/uSync/v9/DataTypes/BlockListBlogLayout.config
@@ -10,24 +10,24 @@
   "Blocks": [
     {
       "backgroundColor": null,
-      "contentElementTypeKey": "ed620008-27f5-4cb3-a462-7120bd3570d3",
-      "editorSize": "medium",
-      "forceHideContentEditorInOverlay": false,
       "iconColor": null,
-      "label": null,
-      "settingsElementTypeKey": null,
-      "stylesheet": null,
       "thumbnail": null,
-      "view": null
+      "contentElementTypeKey": "ed620008-27f5-4cb3-a462-7120bd3570d3",
+      "settingsElementTypeKey": null,
+      "view": null,
+      "stylesheet": null,
+      "label": null,
+      "editorSize": "medium",
+      "forceHideContentEditorInOverlay": false
     }
   ],
-  "MaxPropertyWidth": null,
-  "UseInlineEditingAsDefault": false,
-  "UseLiveEditing": true,
-  "UseSingleBlockMode": false,
   "ValidationLimit": {
-    "max": null,
-    "min": null
-  }
+    "min": null,
+    "max": null
+  },
+  "UseSingleBlockMode": false,
+  "UseLiveEditing": true,
+  "UseInlineEditingAsDefault": false,
+  "MaxPropertyWidth": null
 }]]></Config>
 </DataType>
